# boring-gravatars

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  container.yml
src/: main.rs
